--- a/index.html
+++ b/index.html
@@ -1,200 +1,151 @@
-<!--Html Make Something Creative-->
+<!DOCTYPE html>
 <html>
-	<head>
-		<title>Namaste</title>
-		<link rel="stylesheet" text="type/css" href="CreativeCSS.css"> 
-		<script src="Creative.js"></script>
-		<meta name = "description" content="A website containing information about forgetting story of Bhutanese Nepalese">
-	</head>
-	<main>
-	<div class="front">
-		<div class="navbar">
-			<nav>
+<head>
+	<title>My Skiing Website</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style.css">
+</head>
+<body>
+	<header>
+		<nav>
 			<ul>
-			<li><a href="#Background">Background</a></li>
-			<li><a href="#Exile">Exile</a></li>
-			<li><a href="#RefugeeCamp">Refugee Camp</a></li>
-			<li><a href="#America">America</a></li>
-			<li><a href="#Login">Login</a></li>
-			</nav>
-			
-		</ul>
-		</div>
-		<h1>Katha</h1>
-		<br/>
-		<!--<div class="Heading2">Bhutanese Nepalese</div>-->
-	
-		<!--<img src="Image/NepalFlag.jpg" class="NepalFlag">-->
-		<!--<img src="Image/BhutanFlag.jpg" class="BhutanFlag">-->
-	</div>
-	</main>
-	<br/>
-	<body>
-	<section>
-	<div class="Page2">
-	<div class="BhutanPage">
-	<h2 id="Background">Background Of Bhutan:</h2>
-	<p>Druk-yul means "Land of the Thunder Dragon."
-	Bhutan is located in the northern area of South Asia and is also in the eastern Himalayan mountain area. In the 1800's, some groups of Nepalese began immigrating to southern Bhutan. 
-	</p>
-	</div>
-	<!--<img src="Image/BhutanFlag.jpg" class="BhutanFlag">-->
-	<div class="Landscape">
-	<!--<img src="Image/Bhutan.jpg" class="Bhutan">->
-	<!--<img src="Image/KingQueen.jpg" class="KingQueen">-->
-	<!--<img src="Image/People.jpg" class="People">-->
-	<!--<img src="Image/Mountains.jpg" class="Mountains">-->
-	<div class="NepalPage">
-	<h2 id="Background">Background Of Nepal:</h2>
-	<p>Standing high through the high Himalayas yet down-to-earth cultures, Nepal offers the true meaning of diversity in both nature and culture. 
-	My ancestors used to live near the Himalayas, and the immgration was through a contract between two countries.</p>
-	<!--<img src="Image/NepalFlag.jpg" class="NepalFlag">-->
-	<!--<img src="Image/Nepal.jpg" class="Nepal">-->
-	<!--<img src="Image/Culture.jpg" class="Culture">-->
-	<!--<img src="Image/Massacre.jpg" class="Massacre">-->
-	<!--<img src="Image/Panchthar.jpg" class="Panchthar">-->
-	</div>
-	<!--<img src="Image/NepalFlag.jpg" class="NepalFlag">-->
-	</div>
-	<!--<div class="PageBreak"><em>CopyRight & copy; 2022 Chandra Dhimal </em></div>-->
-	</div>
-	</section>
-	<br/>
-	
-	
-		<div class="Third">
-		<div id="Exile">
-		<div class="section1">
-		<h3>As my ancestor made home in an another country by sharing their langauge, culture and religion, it caused an issue of Bhutan's Nationality Law of 1958. Bhutan government establishes strict rules for all the citizens to follow, which were:</h3>
-			<ul>
-					<li>Speaking other language was forbided</li> <br/>
-					<li>Only Bhutanese uniforn, other uniform was forbided to wear in public</li> <br/>
-					<li>Follow Bhutanese's beliefs and religion</li> <!--This Rules are what my parents told me, and not through any research, because they were the one physically experienced it-->
-					
+				<li><a href="#">Home</a></li>
+				<li><a href="#">About</a></li>
+				<li><a href="#">Ski Resorts</a></li>
+				<li><a href="#">Ski Gear</a></li>
+				<li><a href="#">Contact Us</a></li>
 			</ul>
-			<p>In 1990, it caused a large protest for Nepalese rights. My parents were involved in the right, because they wanted the privilege to follow their religion and value freely.</p>
-			</div>
-			<div class="section2">
-				<h3>Sadly,the protest caused chaos and erupted fires in people homes</h3>
-				<p>Bhutanese authories started destroying Nepalis' property, arresting protester, torturing and killing Nepali's aggressivly. In this act, many of my cousins were killed by the police in the protest. In December 1990, the authories announced that if Nepali's do not prove their citizenship, and they will have to leave the country. But, their intentions were killing them right there and then, if we did not prove the citizenships</p>
-			</div>
-			<div class="section3">
-			<h3>Leaving the Country</h3>
-			<p>My parents had their citizenship but knew that they still will be killed, therefore decided to quietly leave the country overnight with their whole family. Sadly, that night my dad's family did not came, so he had no choice but leave without his sisters, brothers, or parents. My parents were leaving their homeland, not knowing that they will never return</p>
-			</div>
-			</div>
-			
-		</div>
-
-	<section>
-		<div id="RefugeeCamp">
-			<div class="Camp1">
-			<h3>Arrived To Nepal</h3>
-				<p>After 2-4 months of travel, my parents sucessfully arrived to Nepal</p>
-				<!--<img src="Image/Village.jpg" class="Village">-->
-				</div>
-			<div class="Camp2">
-			<h3>Nepal Citizenship</h3>
-				<p>Nepali government policy denies citizenship for refugees two basic right, which are freedom of movement and the right of work and earn a living. Some did acquire legal citizenship but through marriage or descent</p>
-				</div>
-			<div class="Camp3">
-			<h3>Refugee Camp</h3>
-				<p>Approximately 107,000 refugees reside in seven camps in easter Nepal: Beldangi-1, Beldangi-2, Goldhap, Timai, Sanisichare, and Khudunbari</p>
-				<p>My parents lived in the refugee camp for years:
-				<input id="myInput" type="text"> through United Nations High Commissioner for Refugees(UNHCR)</p>
-					<button id="Time" onclick=" WhatYearFunction()">Find Out</button>
-					<p id="Years"></p>
-				</div>
-		
-		
-		
-		
-		</div>
-	
-	
-	</section>
-	
-
-	
-	
-	
-	<section>
-		<div id="America">
-		<div class="America1">
-		<h3>TRIP TO AMERICA!</h3>
-		<p>In 2010, my parents processed an application to come to America</p>
-		<p>We came to America in the year 2011</p>
-		</div>
-		<div class="America2">
-		<h3>Life As For Now</h3>
-		<p>Many of my cousins are all over the world, including, United State Of America, Bhutan, India and Nepal.</p>
-		</div>
-		<div class="America3">
-		<h3>My Thoughts</h3>
-		<p>I am was pretty young when I came to America, but I still remember the lifestyle we had in the RefugeeCamp, and it is definitely far more better here. So, I am really happy for the decisions they made, and I definitely want to visit Bhutan in my life to visit my cousins that still lives there. </p>
-		<div class="MoreInformation">
-		<button onclick="MoreInformation()">If you want to know more information.</button>
-		<h3>OR</h3>
-		<p><a href="mailto:chdhimal@millersville.edu">Feel Free To Contact, If You Want To Know More</a></p>
-		</div>
-
-		</div>
-		
-	
-		</div>
-	
-	
-
-	
-	</section>
-
+		</nav>
+		<h1>My Skiing Website</h1>
+		<p>Welcome to my website about skiing! Here, you'll find information about the best ski resorts, the latest ski gear, and tips for improving your skiing skills.</p>
+	</header>
+	<main>
 		<section>
-		<form class="Contact" action= "http://www.randyconnolly.com/tests/process.php
-"method="post">
-		<div class="Page">
-		<div class ="LoginPage">
-			<h2 id="Login"></h2>
-			<h4> Login Page </h4>
-				<label>Username: </label>
-				<input type="text" placeholder="Enter Username">
-				<label>Password: </label>
-				<input type="password" name="password" placeholder="Enter Password">
-				<!--<button onclick="ItisaFunction()">Login</button>-->
-				<input type="submit" name="submit" value="Login">
-			</div>
-			</div>
-	</form>	
-		
-		
-		
+			<h2>About Skiing</h2>
+			<p>Skiing is a popular winter sport that involves sliding down snowy slopes on skis. It's a fun and exhilarating way to enjoy the winter months, and it's a great way to stay active and healthy.</p>
+			<p>There are many different types of skiing, including downhill skiing, cross-country skiing, and freestyle skiing. Each type of skiing has its own unique challenges and techniques, so it's important to choose the type of skiing that's right for you.</p>
 		</section>
-	
-	<!--<section>
-	<form class="Contact" action= "http://www.randyconnolly.com/tests/process.php
-"method="post">
-		<div id="ContactInformation">
-	<div class="ContactMe">
-	<p>To Learn More, Please Feel Free To Contact Me, Please Fill Out This Form</p>
-	<input  id="Email" type="text" name="email" placeholder="Write Your Email"> 
-	<input type="data" name="phone number" placeholder="Write Your Phone Number"> <br/>
-	<input type="submit" name="submit" value="Click to submit">
-	</div>
-	</div>
-	</form>	
-	
-	
-	
-	
-	
-	
-	
-	</section>-->
-	<meta name="Author" Content="Chandra Dhimal">
-</body>
-<footer>
+		<section>
+			<h2>Best Ski Resorts</h2>
+			<p>There are many great ski resorts around the world, each offering its own unique skiing experience. Some of the best ski resorts include:</p>
+			<ul>
+				<li>Whistler Blackcomb in Canada</li>
+				<li>Chamonix in France</li>
+				<li>St. Anton in Austria</li>
+				<li>Aspen Snowmass in the United States</li>
+			</ul>
+			<p>These ski resorts offer a variety of skiing terrain, from beginner slopes to advanced backcountry skiing. They also offer a range of other activities, such as snowboarding, ice skating, and snowshoeing.</p>
+		</section>
+		<section>
+			<h2>Ski Gear</h2>
+			<p>Having the right ski gear is essential for a great skiing experience. Some of the most important pieces of ski gear include:</p>
+			<ul>
+				<li>Skis</li>
+				<li>Ski boots</li>
+				<li>Ski bindings</li>
+				<li>Ski poles</li>
+				<li>Ski goggles</li>
+				<li>Ski helmet</li>
+			</ul>
+			<p>It's important to choose the right gear for your skill level and the type of skiing you'll be doing. Talk to a ski gear expert to help you choose the right gear for you.</p>
+		</section>
+		<section>
+			<h2>Contact Us</h2>
+			<form action="submit-form.php" method="POST">
+				<label for="name">Name:</label>
+				<input type="text" id="name" name="name">
+				<label for="email">Email:</label>
+				<input type="email" id="email" name="email">
+				<label for="message">Message:</label>
+				<textarea id="message" name="message"></textarea
+  <body>
+    <header>
+      <h1>My Skiing Blog</h1>
+      <nav>
+        <ul>
+          <li><a href="#about-me">About Me</a></li>
+          <li><a href="#latest-posts">Latest Posts</a></li>
+          <li><a href="#contact-me">Contact Me</a></li>
+        </ul>
+      </nav>
+    </header>
 
-	<p><em> Copyright &copy; 2022 Katha </em></p>
+    <main>
+      <section id="about-me">
+        <h2>About Me</h2>
+        <img src="skier.jpg" alt="A skier on the slopes">
+        <p>Hi, I'm John and I love skiing! I've been skiing for over 10 years now and I've skied all over the world. I started this blog to share my experiences and tips with fellow skiers.</p>
+      </section>
 
-</footer>
+      <section id="latest-posts">
+        <h2>Latest Posts</h2>
+        <article>
+          <h3>10 Tips for Beginner Skiers</h3>
+          <img src="beginner.jpg" alt="A beginner skier">
+          <p>If you're new to skiing, it can be intimidating. But with these tips, you'll be shredding the slopes in no time!</p>
+          <a href="#">Read more</a>
+        </article>
 
+        <article>
+          <h3>The Best Ski Resorts in Europe</h3>
+          <img src="europe.jpg" alt="A ski resort in Europe">
+          <p>Europe has some of the best ski resorts in the world. Here are my top picks for your next ski trip.</p>
+  <body>
+    <header>
+      <h1>My Skiing Blog</h1>
+      <nav>
+        <ul>
+          <li><a href="#about-me">About Me</a></li>
+          <li><a href="#latest-posts">Latest Posts</a></li>
+          <li><a href="#contact-me">Contact Me</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <section id="about-me">
+        <h2>About Me</h2>
+        <img src="skier.jpg" alt="A skier on the slopes">
+        <p>Hi, I'm John and I love skiing! I've been skiing for over 10 years now and I've skied all over the world. I started this blog to share my experiences and tips with fellow skiers.</p>
+      </section>
+
+      <section id="latest-posts">
+        <h2>Latest Posts</h2>
+        <article>
+          <h3>10 Tips for Beginner Skiers</h3>
+          <img src="beginner.jpg" alt="A beginner skier">
+          <p>If you're new to skiing, it can be intimidating. But with these tips, you'll be shredding the slopes in no time!</p>
+          <a href="#">Read more</a>
+        </article>
+
+        <article>
+          <h3>The Best Ski Resorts in Europe</h3>
+          <img src="europe.jpg" alt="A ski resort in Europe">
+          <p>Europe has some of the best ski resorts in the world. Here are my top picks for your next ski trip.</p>
+          <a href="#">Read more</a>
+        </article>
+      </section>
+
+      <section id="contact-me">
+        <h2>Contact Me</h2>
+        <form>
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="name"><br>
+
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email"><br>
+
+          <label for="message">Message:</label>
+          <textarea id="message" name="message"></textarea><br>
+
+          <input type="submit" value="Send">
+        </form>
+      </section>
+    </main>
+
+    <footer>
+      <p>&copy; 2023 My Skiing Blog</p>
+    </footer>
+  </body>
 </html>
